<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical" >
    
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   
    android:layout_margin="10dp"
    android:text="@string/first_name"
    android:textSize="20sp"
    android:textColor="@android:color/holo_red_light"
    android:background="@android:color/holo_green_light"
    android:padding="10dp"
    
 />

<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:layout_margin="10dp"
    android:text="@string/second_name"
    android:textSize="20sp"
    android:textColor="@android:color/holo_red_light"
    android:background="@android:color/holo_green_light"
    android:padding="10dp"
    
 />

<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:text="@string/third_name"
   
    android:textSize="20sp"
    android:textColor="@android:color/holo_red_light"
    android:background="@android:color/holo_green_light"
    android:padding="10dp"
    
 />
  <!--   -->
<EditText 
    
 	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:maxLength="18"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
   
    android:hint="@string/edittext_password"
    />

<EditText 
    
 	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:maxLength="15"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
   	android:password="true"
   	
    android:hint="@string/edittext_password"
    />
<Button 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:text="@string/button_login"
    />

<Button 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:text="@string/button_register"
    />

<ImageButton
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:background="@drawable/meinv" />
<ImageView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:src="@drawable/meinv2"
    android:scaleType="center"
    />

</LinearLayout>

