<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/first_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/second_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        android:background="@android:color/holo_orange_light"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
          
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray"
            android:text="@string/third_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/fourth_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray"
            android:text="@string/fiveth_name"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>