<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/first_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:background="@android:color/holo_red_dark"
        android:text="@string/second_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        
        android:background="@android:color/darker_gray"
        android:text="@string/third_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</FrameLayout>