<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <Button 
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontal"
        android:padding="@dimen/padding_horizontal"
        android:background="@drawable/background_color_selector"
        android:text="@string/button_one"
        
        />
    <Button 
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        android:onClick="goBackOnClick"
    
        
        />
    
    <ImageButton 
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_three"
       
        android:src="@drawable/meinv"
        />
	<Button 
	    android:id="@+id/button_widget_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="跳转到RadioButton"
	    />
</LinearLayout>
