<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    

        <TextView
            android:id="@+id/text_count_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/text_count"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edittext_count"
            android:layout_toRightOf="@id/text_count_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入账户" 
            android:maxLength="20"
            android:background="@drawable/bg_global_search_textbox"/>
        
  
    
    
        

        <TextView
            android:id="@+id/textview_password"
            android:layout_below="@id/text_count_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/text_password"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_below="@id/edittext_count"
            android:layout_toRightOf="@id/textview_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入密码" 
            android:maxLength="20" />
        
    <Button 
        
        android:id="@+id/button_weixin_login"
        android:layout_below="@id/textview_password"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/button_confirm"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    	

</RelativeLayout>